v2.0.0 - Refactoring - migrated to java 21 - migrated to latest spring & spring-boot versions - addition of Dockerfile - removal of persistence related actions as they were useless. rip memes